// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DoesNotExist /> rendering should render correctly custom 404 page with props 1`] = `
<div>
  <div
    class="container content"
    data-testid="not-found-404"
    id="not-found-404"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="row owisp-404-row-1"
          >
            404
          </div>
          <div
            class="row owisp-404-row-2"
          >
            Not Found
          </div>
          <div
            class="row owisp-404-row-3"
          >
            Sorry, we couldn't find the page you were looking for.
          </div>
          <div
            class="row owisp-404-row-4"
          >
            <a
              class="link"
              href="/default"
            >
              Go back to homepage
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DoesNotExist /> rendering should render correctly default 404 page without props 1`] = `
<div>
  <div
    class="container content"
    data-testid="not-found-404"
    id="not-found-404"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="row owisp-404-row-1"
          >
            Oops!
          </div>
          <div
            class="row owisp-404-row-2"
          >
            404 Not Found
          </div>
          <div
            class="row owisp-404-row-3"
          >
            Sorry, an error has occurred, Requested page not found!
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DoesNotExist /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    data-testid="not-found-404"
    id="not-found-404"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="row owisp-404-row-1"
          >
            404_H
          </div>
          <div
            class="row owisp-404-row-2"
          >
            404_SUBH
          </div>
          <div
            class="row owisp-404-row-3"
          >
            404_MESSAGE
          </div>
          <div
            class="row owisp-404-row-4"
          >
            <a
              class="link"
              href="/default"
            >
              HOME_PG_LINK_TXT
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
